--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ body {
     margin: auto;
     overflow: hidden;
 }
+.new{
+    text-decoration: none;
+    color: black;
 
+}
 header {
     background: #333;
     padding: 10px 0;
@@ -44,7 +48,7 @@ nav ul li a:hover {
 }
 
 #home {
-    background: ;background: rgb(183,201,199);
+    background: rgb(183,201,199);
     background: linear-gradient(72deg, rgba(183,201,199,0.10869565217391308) 7%, rgba(95,105,103,0.10869565217391308) 8%, rgba(185,240,233,1) 30%, rgba(183,201,199,1) 32%, rgba(183,201,199,1) 77%, rgba(203,193,214,0.008928571428571397) 92%, rgba(183,201,199,0.10869565217391308) 100%, rgba(145,109,184,0.008928571428571397)
      100%, rgba(148,104,196,0.008928571428571397) 118%);
     color:black;
@@ -55,8 +59,9 @@ nav ul li a:hover {
 }
 
 #home h1 {
-    font-size: 20px;
-    margin-bottom: 20px; 
+    font-size: 40px;
+    margin-bottom: 20px;
+    margin-right: 40px; 
 }
 
 #home p {
@@ -64,30 +69,28 @@ nav ul li a:hover {
 }
 #home img{
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 230px;
+    right: 120px;
     height: 400px;
 
 
 }
 .asish{
-    width: 70%;
+    width: 50%;
     margin: auto;
     overflow: hidden;
     position: absolute;
     left: 5px;
-    top: 120px;
+    top: 160px;
 
 }
 
 #about {
-    background:background: rgb(145,109,184);
+    background:rgb(145,109,184);
     background: linear-gradient(72deg, rgba(145,109,184,0.9914529914529915) 20%, rgba(145,109,184,0.008928571428571397)
      100%, rgba(15,192,210,0.008928571428571397) 118%);;
     padding: 50px 0;
-    text-align: center;
-}
-
+    text-align: center;}
 #about h2 {
     margin-bottom: 20px;
 }
@@ -98,15 +101,15 @@ nav ul li a:hover {
     margin: 0 auto;
 }
 
-#Skillss {
-    background: background: rgb(145,109,184);
+#Skills {
+    background:  rgb(145,109,184);
     background: linear-gradient(72deg, rgba(145,109,184,0.9914529914529915)
      2%, rgba(213,224,187,0.8746438746438746) 78%);;
     padding: 50px 0;
     text-align: center;
 }
 
-#Skillss h2 {
+#Skills h2 {
     margin-bottom: 30px;
 }
 
@@ -124,7 +127,7 @@ nav ul li a:hover {
 }
 
 #contact {
-    background:background: rgb(2,1,23);
+    background: rgb(2,1,23);
     background: radial-gradient(circle,
      rgba(2,1,23,1) 64%, rgba(0,116,255,0.6386204139859069) 100%);
     padding: 50px 0;
@@ -137,7 +140,7 @@ nav ul li a:hover {
 }
 
 #contact a {
-    color:white;
+    color: aqua;
     text-decoration: none;
 }
 
